# ft232r

./: CMakeLists.txt  README.md  main.cpp
ft232r/: CMakeLists.txt  FT232R.cpp  FT232R.h  _base_FT232R.h  _ftd2xx.h
ftdi/: CMakeLists.txt  ftd2xx.cpp  ftd2xx.h  wrapper_ftd2xx.h
unitTests/: unitTests_ftdi.cpp
